// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayCheckbox render as read only 1`] = `
<div>
  <div
    class="custom-control custom-checkbox"
  >
    <label>
      <input
        aria-disabled="true"
        checked=""
        class="custom-control-input"
        readonly=""
        type="checkbox"
      />
      <span
        class="custom-control-label"
      >
        <span
          class="custom-control-label-text"
        >
          Indeterminate disabled
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`ClayCheckbox renders 1`] = `
<div>
  <div
    class="custom-control custom-checkbox"
  >
    <label>
      <input
        class="custom-control-input"
        type="checkbox"
      />
      <span
        class="custom-control-label"
      />
    </label>
  </div>
</div>
`;

exports[`ClayCheckbox renders as checked 1`] = `
<div>
  <div
    class="custom-control custom-checkbox"
  >
    <label>
      <input
        checked=""
        class="custom-control-input"
        type="checkbox"
      />
      <span
        class="custom-control-label"
      >
        <span
          class="custom-control-label-text"
        >
          Checked
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`ClayCheckbox renders as checked and disabled 1`] = `
<div>
  <div
    class="custom-control custom-checkbox"
  >
    <label>
      <input
        checked=""
        class="custom-control-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="custom-control-label"
      >
        <span
          class="custom-control-label-text"
        >
          Checked disabled
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`ClayCheckbox renders as disabled 1`] = `
<div>
  <div
    class="custom-control custom-checkbox"
  >
    <label>
      <input
        class="custom-control-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="custom-control-label"
      >
        <span
          class="custom-control-label-text"
        >
          Unchecked disabled
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`ClayCheckbox renders with a label 1`] = `
<div>
  <div
    class="custom-control custom-checkbox"
  >
    <label>
      <input
        class="custom-control-input"
        type="checkbox"
      />
      <span
        class="custom-control-label"
      >
        <span
          class="custom-control-label-text"
        >
          Unchecked
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`ClayCheckbox renders with an indeterminate value 1`] = `
<div>
  <div
    class="custom-control custom-checkbox"
  >
    <label>
      <input
        checked=""
        class="custom-control-input"
        type="checkbox"
      />
      <span
        class="custom-control-label"
      >
        <span
          class="custom-control-label-text"
        >
          Indeterminate
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`ClayCheckbox renders with an indeterminate value and disabled 1`] = `
<div>
  <div
    class="custom-control custom-checkbox"
  >
    <label>
      <input
        checked=""
        class="custom-control-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="custom-control-label"
      >
        <span
          class="custom-control-label-text"
        >
          Indeterminate disabled
        </span>
      </span>
    </label>
  </div>
</div>
`;
